[tool.poetry]
name = "gspread-to-gcal"
version = "0.1.0"
description = ""
authors = ["GuyLiner <guyliner69@proton.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^6.1.2"
google-api-python-client = "^2.141.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
